# me433

./: .gitmodules  README.md
dev_hid_composite/: CMakeLists.txt
hello_multicore/: CMakeLists.txt  multicore.c
hw10/: README.md  hw10.py
hw11/: CMakeLists.txt  README.md  hw11.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
hw13/: CMakeLists.txt  README.md  hw13.c
hw14/: README.md
hw15/: CMakeLists.txt  hw15.c
hw16/: CMakeLists.txt  README.md
hw2/blink/: CMakeLists.txt  blink.c
hw2/hello_gpio_irq/: CMakeLists.txt  hello_gpio_irq.c
hw2/hello_usb/: CMakeLists.txt
hw2/led_gpio_usb/: CMakeLists.txt  led_gpio_usb.c
hw3/: CMakeLists.txt  README.md  hw3.c
hw4/: CMakeLists.txt  README.md  hw4.c
hw5/: CMakeLists.txt  README.md  hw5.c
hw6/: CMakeLists.txt  README.md  hw6.c
hw7/: CMakeLists.txt  README.md  hw7.c  ssd1306.c
hw8/: CMakeLists.txt  README.md  hw8.c
hw9/: CMakeLists.txt  README.md  hw9.c
line_follower/: CMakeLists.txt  MOTOR_TROUBLESHOOTING.md  README.md  config.h  main.cpp  pixy2.cpp  pixy2.h
pio_ws2812/: CMakeLists.txt
